update all packages to latest

--- a/nx.json
+++ b/nx.json
@@ -1,12 +1,11 @@
 {
+  "enableDbCache": true,
   "extends": "nx/presets/npm.json",
   "tasksRunnerOptions": {
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
-        "cacheableOperations": [
-          "build"
-        ],
+        "cacheableOperations": ["build"],
         "parallel": 3
       }
     }
