--- a/nx.json
+++ b/nx.json
@@ -1,18 +1,10 @@
 {
   "enableDbCache": true,
   "extends": "nx/presets/npm.json",
-  "tasksRunnerOptions": {
-    "default": {
-      "runner": "nx/tasks-runners/default",
-      "options": {
-        "cacheableOperations": ["build"],
-        "parallel": 3
-      }
-    }
-  },
   "targetDefaults": {
     "build": {
-      "outputs": ["{projectRoot}/.next"]
+      "outputs": ["{projectRoot}/.next"],
+      "cache": true
     }
   }
 }
