--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "lage": "2.8.1",
-    "nx": "19.7.2",
+    "nx": "20.0.0-beta.2",
     "turbo": "2.1.1",
     "typescript": "4.5.2"
   },
